# xlasisku

./: .gitignore  .gitmodules  .nojekyll  Cargo.toml  Lojbanparse.java  allwords.txt  construct.js  events.js  helper.js  index.html  jvoptions.html  noto.css  readme.md  search.js  style.css  worker.js  xlasisku.html
.github/workflows/: jvs-update.yml
data/: allwords.txt  chars.txt  naljvo.js  naljvo.txt  unofficial_rafsi_maybe.txt
data/backup/: naljvo.txt
min/: data-errors.txt
scripts/: Allwords.java  Cargo.toml  Dataparse.java  Datawrite.java  Jvsparse.java
scripts/src/: main.rs
scripts2/: Cargo.toml  data.txt
scripts2/src/: main.rs
src/: main.rs
