[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
xml-rs = "0.8.19"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
